pricing - competitor popup - fix for opacity overlapping fraction on table header.

--- a/JsPlc.Ssc.PetrolPricing/JsPlc.Ssc.PetrolPricing.Portal/Content/prices.css
+++ b/JsPlc.Ssc.PetrolPricing/JsPlc.Ssc.PetrolPricing.Portal/Content/prices.css
@@ -571,7 +571,7 @@ table.competitorTable > tbody > .competitor-row  {
 .price-diff {font-family: monospace; font-size: 90%;}
 
 .price-pence {font-size: 115%; letter-spacing: 0px;}
-.price-fraction {letter-spacing: 2px; padding-top: 1px; opacity: 0.75;}
+.price-fraction {letter-spacing: 2px; padding-top: 1px;}
 .price-na {font-size: 110%; letter-spacing: 1px; color: #ccc; font-style: italic;}
 
 .pricing-grid.hide-fuel-price-change-up .col-valid .fuel-price-change-up,
